--- a/package.json
+++ b/package.json
@@ -1,38 +1,46 @@
 {
-  "name": "angular-books-wishlist",
+  "name": "bookwish",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/router": "^14.2.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
+    "@angular/animations": "~13.3.4",
+    "@angular/common": "~13.3.4",
+    "@angular/compiler": "~13.3.4",
+    "@angular/core": "~13.3.4",
+    "@angular/forms": "~13.3.4",
+    "@angular/platform-browser": "~13.3.4",
+    "@angular/platform-browser-dynamic": "~13.3.4",
+    "@angular/router": "~13.3.4",
+    "rxjs": "~6.5.5",
+    "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.7",
-    "@angular/cli": "~14.2.7",
-    "@angular/compiler-cli": "^14.2.0",
-    "@types/jasmine": "~4.0.0",
-    "jasmine-core": "~4.3.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.7.2"
+    "@angular-devkit/build-angular": "~13.3.3",
+    "@angular/cli": "~13.3.3",
+    "@angular/compiler-cli": "~13.3.4",
+    "@types/node": "^17.0.25",
+    "@types/jasmine": "~4.0.3",
+    "@types/jasminewd2": "~2.0.10",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~4.1.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.19",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~5.0.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~10.7.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.6.3"
   }
 }
